# todo-app-python

./: .gitignore  README.md  docker-compose.yml  main.py  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 5b0184c19368_update_todos_table.py  84d817398c71_create_users_table.py  92a295090414_all_new_tables.py  9bad2aeaa886_update_users_table.py  dd03387123f6_update_user_table.py  fe341369d83b_create_todo_table.py
api_v1/auth/user/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
api_v1/auth/utils/: __init__.py  jwt.py  password.py
api_v1/todo/: __init__.py  crud.py  dependencies.py  schemas.py  views.py
core/: __init__.py  config.py
core/models/: __init__.py  base.py  db_helper.py  todo.py  user.py
